--- a/src/app/inventario/login/login.component.html
+++ b/src/app/inventario/login/login.component.html
@@ -1,3 +1,4 @@
+<p>login works!</p>
 <style>
     :host {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -104,7 +105,7 @@
         cursor: pointer;
     }
 
-    .productos{
+    .login{
         display: flex;
       justify-content: center;
       margin: relative;
@@ -157,7 +158,7 @@
         </g>
       </svg>
   
-      <span>Egreso por ventas</span>
+      <span>LogIn</span>
   
       <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
         <title>Rocket Ship Smoke</title>
@@ -166,38 +167,22 @@
   
     </div>
 
-    
-    <div class = "productos">
-      <div class ="table table-hover mitabla" >
-       <table>
-         <thead>
-           <tr>
-             <th>ID</th>
-             <th>PRODUCTO</th>
-             <th>CANTIDAD</th>
-           </tr>
-         </thead>
-         <tbody>
-           <tr *ngFor="let producto of productos" class="text-center">
-             <td>{{producto.id}}</td>
-             <td>{{producto.nombre}}</td>
-             <td>{{producto.cantidad}}</td>
-           </tr>
-         </tbody>
-       </table>
-     </div>
-
-
-       <div class ="formulario">
+    <div class = "login">
+       
+      <div class ="formulario">
+         <form action="">
+          <div class="form-group">
             <div>
-                <p>Cantidad a retirar: <input type="text" class="form-control" name="nuevo" required [(ngModel)]="producto.cantidad"> </p>
-                <br> <br>  <br>
-                
-                <button (click)="Actualizar()" class="btn btn-danger">Actualizar</button>
+                <p>Usuario: <input type="text" class="form-control" name="usuario" required [(ngModel)]="persona.usuario"> </p>
+                <p>Contraseña: <input type="text" class="form-control" name="contrasena" required [(ngModel)]="persona.contrasena"> </p>
+                <button (click)="NOSE()" class="btn btn-danger">Iniciar sesión</button>
+                <p></p>
+                <button data-ng-click="click('/registro/registro.component.html')" class="btn btn-danger">Registrar</button>
 
             </div>
-       </div>
-
+          </div>
+        </form>
+      </div>
     </div>
 
     
