--- a/src/app/inventario/registro/registro.component.html
+++ b/src/app/inventario/registro/registro.component.html
@@ -174,6 +174,11 @@
             <div>
                 <p>Usuario: <input type="text" class="form-control" name="usuario" required [(ngModel)]="persona.usuario"> </p>
                 <p>Contraseña: <input type="text" class="form-control" name="contrasena" required [(ngModel)]="persona.contrasena"> </p>
+                <select name="Cargo" [(ngModel)]="persona.cargo">
+                  <option value="0" selected>Escoge </option> 
+                  <option value="1">xxx</option> 
+               </select>
+               <p></p>
                 <button data-ng-click="click(http://localhost:4200/login)" class="btn btn-danger">Registrar</button>
                 <p></p>
                 <button data-ng-click="click(http://localhost:4200/login)" class="btn btn-danger">Iniciar sesión</button>
